// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testResponseHeaderContent should add content header test for property check & number value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have value \\"75000\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' matches '75000'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.eql(75000);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & pm variable value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have value \\"{{postman_env_variable}}\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' matches '{{postman_env_variable}}'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.eql(pm.collectionVariables.get(\\"postman_env_variable\\"));
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result contains pm variable value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should contain value \\"{{postman_env_variable}}\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' contains '{{postman_env_variable}}'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.include(pm.collectionVariables.get(\\"postman_env_variable\\"));
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result contains value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should contain value \\"Musk\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' contains 'Musk'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.include(\\"Musk\\");
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result has length value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have a length of \\"57\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value of 'Operation-Location' has a length of '57'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.have.lengthOf(57);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result has maximum length value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have a maximum length of \\"60\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value of 'Operation-Location' has a maximum length of '60'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\").length).is.at.most(60);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result has maximum zero length value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have a maximum length of \\"0\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value of 'Operation-Location' has a maximum length of '0'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\").length).is.at.most(0);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result has minimum length value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have a minimum length of \\"10\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value of 'Operation-Location' has a minimum length of '10'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\").length).is.at.least(10);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result has minimum zero length value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have a minimum length of \\"0\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value of 'Operation-Location' has a minimum length of '0'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\").length).is.at.least(0);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result has zero length value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have a length of \\"0\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value of 'Operation-Location' has a length of '0'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.have.lengthOf(0);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check & result matches oneOf values 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should be one of the values \\"Space-X,Tesla\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' is matching one of: 'Space-X,Tesla'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.be.oneOf([\\"Space-X\\",\\"Tesla\\"]);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check empty value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have value \\"\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' matches ''\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.eql(\\"\\");
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check that does not exist 1`] = `
Array [
  "// Validate if response header does not exists 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location does not exists\\", function () {
   pm.response.to.not.have.header(\\"Operation-Location\\");
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for property check without value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for string for property check & boolean value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have value \\"true\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' matches 'true'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.eql(true);
});
",
]
`;

exports[`testResponseHeaderContent should add content header test for string for property check & string value 1`] = `
Array [
  "// Validate if response header is present 
pm.test(\\"[GET]::/crm/companies/:id - Response header Operation-Location is present\\", function () {
   pm.response.to.have.header(\\"Operation-Location\\");
});
",
  "// Response header should have value \\"Spacex\\" for \\"Operation-Location\\"
pm.test(\\"[GET]::/crm/companies/:id - Content check if header value for 'Operation-Location' matches 'Spacex'\\", function() {
  pm.expect(pm.response.headers.get(\\"Operation-Location\\")).to.eql(\\"Spacex\\");
});
",
]
`;
